sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: ')' expected but ';' found.
        swap(i+1;i);
                ^AlgBubbleSort1:8: error: ';' expected but ')' found.
        swap(i+1;i);
                  ^