sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var swapped=false
  do {
    swapped= false;
    for (i <- 0 to getValueCount()-2)
      if(isSmaller(i,i+1)) {
        swap(i+1;i);
        swapped= true;
      }
  } while(swapped);
}